test/features/errors/runtime/e3007_promise_rejected.spl
# E3007: Promise Rejected

Feature: E3007 - Promise Was Rejected
  As a Simple runtime
  I want to detect promise rejections
  So that async errors are handled

  Background:
    Given I have the Simple runtime

  Scenario: Unhandled promise rejection
    When I run:
      '''
      async fn test():
        val promise = Promise.reject("Error occurred")
        # Runtime error: promise rejected without handling
      '''
    Then I should see runtime error E3007
    And the error message should be "promise was rejected: {reason}"
    And the label should indicate "promise rejection"
    And the help should suggest "add error handling for promise rejections"

  Scenario: Handled promise rejection
    When I run:
      '''
      async fn test():
        try:
          val promise = Promise.reject("Error")
          await promise
        catch e:
          print("Handled: {e}")  # OK: error handled
      '''
    Then execution should succeed

  Scenario: Korean language error
    Given I set runtime language to "ko"
    When I run:
      '''
      async fn test():
        val promise = Promise.reject("Failed")
      '''
    Then I should see runtime error E3007
    And the error message should contain "프로미스 거부"
